Fix layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -471,7 +471,7 @@ button {
 }
 
 .app-logo {
-    height: 70px;
+    height: 65px;
     margin: 0 auto;
 
     @include md {
