--- a/src/components/Workspace/Tablature/Tablature.scss
+++ b/src/components/Workspace/Tablature/Tablature.scss
@@ -3,6 +3,10 @@
 
 $label-font-size: 0.8rem;
 
+.select__multi-value__label {
+    color: white !important;
+}
+
 .tabcontainer {
     background-color: white;
     position: relative;
@@ -10,6 +14,7 @@ $label-font-size: 0.8rem;
     border: 4px solid rgba(0, 0, 0, 0.01);
     box-sizing: border-box;
     margin-bottom: 0.5rem;
+    overflow: hidden;
 
     //   filter: drop-shadow(0px 0px 13px rgba(0, 255, 255, 0.44))
     //   drop-shadow(0px 4px 24px rgba(255, 255, 255, 0.5))
@@ -26,7 +31,7 @@ $label-font-size: 0.8rem;
     }
 
     &__transposition {
-        tect-align: center;
+        text-align: center;
         top: 0.15rem;
         margin: 0;
         font-size: $label-font-size;
@@ -55,8 +60,20 @@ $label-font-size: 0.8rem;
 }
 
 .tabsectioncontainer {
+    // cannot be fixed on top.
+    // position: fixed;
+    // top: 70px;
+    // left: 3%;
+    // z-index: 1;
+    // width: 94%;
+    margin-bottom: 20%;
 
-    &>* {
+    @include sm {
+        position: static;
+        padding-bottom: 0;
+    }
+
+    & > * {
         font-size: $label-font-size;
         padding-bottom: 0.5rem;
 
