--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -12,6 +12,11 @@
 
     &.is-visible {
         display: flex;
+        padding-bottom: 25%;
+
+        @include sm {
+            padding-bottom: 0;
+        }
     }
 
     &__navwrap {
@@ -46,19 +51,21 @@
     }
 
     &__content {
-        border-top: 0px solid $accent-medium;
+        border-top: 0;
         box-sizing: border-box;
         height: 100%;
         flex: 0 1 auto;
-        padding: 12px;
+        // padding: 12px;
 
         @include sm {
             border: 8px solid $accent-medium;
+            // padding: 0;
         }
 
         @include md {
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 0px 0px 40px 0px;
+            padding: 12px;
         }
 
         &::-webkit-scrollbar {
